osticket_security_group.element.template.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Conditions": {
    "NoELB": {
      "Fn::Equals": [
        {
          "Ref": "UseELB"
        },
        "false"
      ]
    },
    "UseELB": {
      "Fn::Equals": [
        {
          "Ref": "UseELB"
        },
        "true"
      ]
    }
  },
  "Description": "This templates creates one security group for osticket instances, and one for their load balancer",
  "Outputs": {
    "osticketElbSecurityGroupId": {
      "Condition": "UseELB",
      "Description": "Security Group ID for the osticket Elastic Load Balancer",
      "Value": {
        "Ref": "osticketElbSecurityGroup"
      }
    },
    "osticketSecurityGroupId": {
      "Description": "Security Group ID for the osticket instances",
      "Value": {
        "Ref": "osticketSecurityGroup"
      }
    }
  },
  "Parameters": {
    "UseELB": {
      "AllowedValues": [
        "true",
        "false"
      ],
      "Default": "true",
      "Description": "Set to true if using an ELB in front of osticket; otherwise set to false",
      "Type": "String"
    },
    "VPC": {
      "Description": "VPC ID",
      "Type": "AWS::EC2::VPC::Id"
    }
  },
  "Resources": {
    "AlbToosticketEgressTcp80": {
      "Condition": "UseELB",
      "Properties": {
        "DestinationSecurityGroupId": {
          "Ref": "osticketSecurityGroup"
        },
        "FromPort": "80",
        "GroupId": {
          "Ref": "osticketElbSecurityGroup"
        },
        "IpProtocol": "tcp",
        "ToPort": "80"
      },
      "Type": "AWS::EC2::SecurityGroupEgress"
    },
    "ElbToosticketIngressTcp80": {
      "Condition": "UseELB",
      "Properties": {
        "FromPort": "80",
        "GroupId": {
          "Ref": "osticketSecurityGroup"
        },
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": {
          "Ref": "osticketElbSecurityGroup"
        },
        "ToPort": "80"
      },
      "Type": "AWS::EC2::SecurityGroupIngress"
    },
    "osticketElbSecurityGroup": {
      "Condition": "UseELB",
      "Properties": {
        "GroupDescription": "Enable osticket ELB access from the Internet",
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  "osticket-elb-",
                  {
                    "Ref": "AWS::StackName"
                  }
                ]
              ]
            }
          }
        ],
        "VpcId": {
          "Ref": "VPC"
        }
      },
      "Type": "AWS::EC2::SecurityGroup"
    },
    "osticketSecurityGroup": {
      "Properties": {
        "GroupDescription": "Enable osticket access from ELB",
        "Tags": [
          {
            "Key": "Name",
            "Value": {
              "Fn::Join": [
                "",
                [
                  "osticket-",
                  {
                    "Ref": "AWS::StackName"
                  }
                ]
              ]
            }
          }
        ],
        "VpcId": {
          "Ref": "VPC"
        }
      },
      "Type": "AWS::EC2::SecurityGroup"
    },
    "PublicToElbIngressTcp443": {
      "Condition": "UseELB",
      "Properties": {
        "CidrIp": "0.0.0.0/0",
        "FromPort": "443",
        "GroupId": {
          "Ref": "osticketElbSecurityGroup"
        },
        "IpProtocol": "tcp",
        "ToPort": "443"
      },
      "Type": "AWS::EC2::SecurityGroupIngress"
    }
  }
}
